--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3'
 services:
+  my-app:
+    container_name: my-app
+    image: 193096894935.dkr.ecr.eu-central-1.amazonaws.com/sanyi-app:latest
+    ports:
+      - 3000:3000
   mongodb:
     container_name: mongodb
     image: mongo
@@ -11,9 +16,10 @@ services:
   mongo-express:
     container_name: mongo-express
     image: mongo-express
+    restart: always
     ports:
       - 8081:8081
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
-      - ME_CONFOG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_SERVER=mongodb
